--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "@types/lodash": "^4.14.91",
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
