--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@types/lodash": "^4.14.91",
+    "angular2-text-mask": "^8.0.4",
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
