--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "koa-logger": "^3.1.0",
     "koa-passport": "^4.0.1",
     "koa-route": "^3.2.0",
+    "koa-router": "^7.3.0",
     "koa-session": "^5.5.1",
     "mongoose": "^4.13.7",
     "nconf": "^0.10.0",
