--- a/app/package.json
+++ b/app/package.json
@@ -24,11 +24,13 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@types/lodash": "^4.14.91",
+    "@types/uuid": "^3.4.3",
     "angular2-text-mask": "^8.0.4",
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
     "rxjs": "^5.5.2",
+    "uuid": "^3.1.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
