--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.20.1",
     "rxjs": "^5.5.2",
     "uuid": "^3.1.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
